[ G2 ][ Design Bug Fix ] Fix hover color not covering full row by overlaying acc-btn on a with single-column grid

--- a/_g2/design-skin/foundation/_scss/layout/gmenu/_gmenu-design-subDropBtn.scss
+++ b/_g2/design-skin/foundation/_scss/layout/gmenu/_gmenu-design-subDropBtn.scss
@@ -52,12 +52,13 @@ Original file path is themes/lightning/design-skin/foundation/ that, please modi
 		}
 		li.menu-item-has-children {
 			display: grid;
-			grid-template-columns: 1fr auto;
+			grid-template-columns: 1fr;
 			border-bottom: $g_nav_sub_separator;
 		}
 		li.menu-item-has-children > a {
+			grid-row: 1;
 			border-bottom: none;
-			padding-right: 0.5em;
+			padding-right: calc(#{$menu_padding_horizontal} + 28px + 0.5em);
 		}
 		li.menu-item-has-children > ul.sub-menu li:last-child > a {
 			border-bottom: none;
@@ -65,14 +66,15 @@ Original file path is themes/lightning/design-skin/foundation/ that, please modi
 		li.menu-item-has-children > ul.sub-menu {
 			border-top: $g_nav_sub_separator;
 			background-color: $g_nav_sub_bg_color;
-			grid-column: 1 / -1;
 		}
 		li.menu-item-has-children > .acc-btn {
+			grid-row: 1;
 			position: relative;
 			top: auto;
 			right: auto;
+			justify-self: end;
 			align-self: center;
-			margin: 0 $menu_padding_horizontal 0 0.5em;
+			margin: 0 $menu_padding_horizontal 0 0;
 		}
 	}
 }
